--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
 }
 
 body {
-  max-width: 100%;
+  max-width: 100vw;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -32,7 +32,7 @@ header .menu {
       flex-wrap: wrap;
   position: fixed;
   background-color: white;
-  width: 100%;
+  width: 100vw;
   -webkit-box-shadow: 0px 5px 5px -5px #a8a8a8;
           box-shadow: 0px 5px 5px -5px #a8a8a8;
   z-index: 1;
@@ -42,9 +42,8 @@ header .menu .logo {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-flex: 2;
-      -ms-flex: 2;
-          flex: 2;
+  -ms-flex-preferred-size: 30%;
+      flex-basis: 30%;
   font-size: 1rem;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
@@ -89,9 +88,8 @@ header .menu nav {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-flex: 3;
-      -ms-flex: 3;
-          flex: 3;
+  -ms-flex-preferred-size: 70%;
+      flex-basis: 70%;
 }
 
 header .menu nav ul {
@@ -224,6 +222,7 @@ header .baner .centerBtn:hover {
 }
 
 main {
+  width: 100vw;
   font-family: "Roboto", sans-serif;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -450,6 +449,7 @@ main .support .wrap div p {
 }
 
 footer {
+  width: 100vw;
   position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
