--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -7,7 +7,7 @@
 }
 
 body {
-  max-width: 100%;
+  max-width: 100vw;
   display: flex;
   flex-direction: column;
 }
@@ -21,12 +21,13 @@ header {
     flex-wrap: wrap;
     position: fixed;
     background-color: white;
-    width: 100%;
+    width: 100vw;
     box-shadow: 0px 5px 5px -5px rgb(168, 168, 168);
     z-index: 1;
     .logo {
       display: flex;
-      flex: 2;
+      // flex: 2;
+      flex-basis: 30%;
       font-size: 1rem;
       justify-content: center;
       align-items: center;
@@ -61,7 +62,8 @@ header {
     nav {
       display: flex;
       align-items: center;
-      flex: 3;
+      // flex: 3;
+      flex-basis: 70%;
       ul {
         display: flex;
         flex-wrap: wrap;
