--- a/css/style.css
+++ b/css/style.css
@@ -176,7 +176,7 @@ header .baner .centerBtn:hover {
   background-color: #ffc82f;
 }
 
-@media (max-width: 775px) {
+@media (max-width: 800px) {
   * {
     font-size: 6px;
   }
@@ -204,7 +204,7 @@ header .baner .centerBtn:hover {
   }
 }
 
-@media (max-width: 393px) {
+@media (max-width: 400px) {
   * {
     font-size: 6px;
   }
@@ -275,6 +275,7 @@ main .gallery {
   -webkit-transform: translate(-50%);
           transform: translate(-50%);
   padding: 1% 0 1% 0;
+  overflow: hidden;
 }
 
 main .gallery div {
@@ -527,7 +528,7 @@ footer .bottom p:nth-child(3) {
   left: 50%;
 }
 
-@media (max-width: 775px) {
+@media (max-width: 800px) {
   footer .contact p {
     font-size: 1.6em;
   }
